syntax = "proto3";

option csharp_namespace = "Protos.Payment";

package payment;

service PaymentService {
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc RefundPayment (RefundPaymentRequest) returns (RefundPaymentResponse);
}

message ProcessPaymentRequest {
  string order_id = 1;
  string customer_id = 2;
  double amount = 3;
  string currency = 4;
  string payment_method = 5;
}

message ProcessPaymentResponse {
  bool success = 1;
  string payment_id = 2;
  string error_code = 3;
  string error_message = 4;
}

message RefundPaymentRequest {
  string payment_id = 1;
  double amount = 2;
  string reason = 3;
}

message RefundPaymentResponse {
  bool success = 1;
  string refund_id = 2;
  string error_message = 3;
}

